force-app/main/default/objects/Customer/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <defaultValue>&quot;Silver&quot;</defaultValue>
    <label>Membership Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>