force-app/main/default/objects/Customer/fields/Preferred_Stylist__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Stylist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Stylist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>