force-app/main/default/objects/Customer/validationRules/Birth_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_Date_Future</fullName>
    <active>true</active>
    <description>Birth Date cannot be a future date.</description>
    <errorConditionFormula>Birth_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Birth_Date__c</errorDisplayField>
    <errorMessage>Birth Date cannot be a future date.</errorMessage>
</ValidationRule>