force-app/main/default/objects/Customer/listViews/All_Customers.listView-meta.xml
<ListView>
    <fullName>All_Customers</fullName>
    <columns>Name</columns>
    <columns>Email__c</columns>
    <columns>Gender__c</columns>
    <columns>Birth_Date__c</columns>
    <columns>Address__City__s</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__CountryCode__s</columns>
    <filterScope>Mine</filterScope>
    <label>All Customers</label>
</ListView>