force-app/main/default/objects/Customer/listViews/Premium_Customer.listView-meta.xml
<ListView>
    <fullName>Premium_Customer</fullName>
    <columns>Name</columns>
    <columns>Email__c</columns>
    <columns>Gender__c</columns>
    <columns>Birth_Date__c</columns>
    <columns>Address__City__s</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__CountryCode__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Type__c</field>
        <operation>equals</operation>
        <value>Platinum,Gold</value>
    </filters>
    <label>Premium Customer</label>
</ListView>